--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wendy Strickland</title>  
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/medium.css">
-    <link rel="stylesheet" href="./css/large.css">
+    <link rel="stylesheet" href="./index/css/index.css">
+    <link rel="stylesheet" href="./index/css/medium.css">
+    <link rel="stylesheet" href="./index/css/large.css">
     <script src="./js/index.js"></script>
    
 </head>
