--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>CIT230: Assignment Portal</h2>
         <hr>
         <ul>
-            <li>Lesson 02: <a href="design-principles.html" class="BYUI">Design Principles</a></li>
+            <li>Lesson 02: <a href="./design-principles.html" class="BYUI">Design Principles</a></li>
             <li>Lesson 03: <a href="Lesson03.html" class="BYUI">Assignment Link</a></li>
             <li>Lesson 04: <a href="Lesson04Assignment1.html" class="BYUI">Link</a> | <a href="Lesson04Assignment2.html" class="BYUI">Link</a></li>
         </ul>
