--- a/design-principles.html
+++ b/design-principles.html
@@ -13,6 +13,7 @@
 <body>
     <div class="head-grid">
             <h1 class="title">Design Principles: PARC</h1> 
+            <p href="index.html" class="home">HOME</p>
             <p class="wendy">Wendy Strickland   |   WDD230   |   Week 2</p>
             <ul class="head-list">
             <li><a href="#proximity" class="menulink"><strong class="big">P</strong>roximity</a></li>
