--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Assignment portal for Wendy Strickland, BYUI-WDD230: Web Frontend Development">
     <title>Wendy Strickland</title>  
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/medium.css">
@@ -11,14 +12,15 @@
     <script src="./js/index.js"></script>
    
 </head>
-<body onload="getdate()" onload="getYear()">
+<body onload="getdate()">
     <div id="all-content">
         <header>
             <img src="./images/profile.jpg" alt="Wendy Strickland" class="photo">
             <h1>Wendy Strickland</h1>
         </header>
+        <main>
     <div id="body-content">
-        <h2>CIT230: Assignment Portal</h2>
+        <h2>WDD230: Assignment Portal</h2>
         <hr>
         <ul>
             <li>Lesson 02: <a href="./design-principles.html" class="BYUI">Design Principles</a></li>
@@ -26,9 +28,10 @@
             <li>Lesson 04: <a href="Lesson04Assignment1.html" class="BYUI">Link</a> | <a href="Lesson04Assignment2.html" class="BYUI">Link</a></li>
         </ul>
         </div>
+        </main>
 <footer onload="getYear()">
     <div class="footer-content">
-        © <span id="NewYear"></span>2021 | Wendy Strickland | Utah | <a href="https://www.byui.edu/online" class="BYUI">BYUI Online Learning</a>
+        © <span id="NewYear"></span>2021 | Wendy Strickland | Utah | <a href="https://www.byui.edu/online" target="_blank" class="BYUI">BYUI Online Learning</a>
         <div id="work"></div>
     </div>
 </footer>
