--- a/design-principles.html
+++ b/design-principles.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Design Principles assignment  | M02  |  WDD230  |  BYU-I">
     <title>Design Principles</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="css/smalldesign.css">
@@ -23,44 +24,45 @@
             <li><a href="#contrast" class="menulink"><strong class="big">C</strong>ontrast</a></li>
    </ul>
    </div>
+   <main>
    <div class="main">
    <div class="col1 col1T">
         <h2 id="proximity" class="what">Proximity</h2>
         <p class="company">Bruno Simon!</p>
         <img src="images/proximity.jpg" alt="hover button" class="photo">
-        <a href="http://www.bruno-simon.com" id="link">bruno-simon.com</a><br>
+        <a href="http://www.bruno-simon.com" class="link">bruno-simon.com</a><br>
         <br>
-        <p id="description" class="orange">This designer made is so that you have to swipe the button then it appears to raise up for you to click.  The use of proximity is by making it appear to gain demension.  The alignment is interesting because it is a screen with a single button, so the button needs to be aligned vertically, horizontally, and with the raised button to be aesthetically pleasing.</p>
+        <p class="description orange">This designer made is so that you have to swipe the button then it appears to raise up for you to click.  The use of proximity is by making it appear to gain demension.  The alignment is interesting because it is a screen with a single button, so the button needs to be aligned vertically, horizontally, and with the raised button to be aesthetically pleasing.</p>
    </div>
    <br>
    <div class="col2 col2T">
         <h2 id="alignment" class="what">Alignment</h2>
         <p class="company">Skyline Films</p>
         <img src="images/alignment.jpg" alt="Films Website, Mobile" class="photo">
-        <a href="http://www.skylinefilms.tv" id="link">skylinefilms.tv</a><br>
+        <a href="http://www.skylinefilms.tv" class="link">skylinefilms.tv</a><br>
         <br>
-        <p id="description" class="gray">The alignment on this one is kind of cool, the different films are aligned in rows, to appear like a film, but it is set at about a 10* angle.  Then the words on the screen are all aligned within an invisible frame so they look like they belong overlaid as they are.</p>
+        <p class="description gray">The alignment on this one is kind of cool, the different films are aligned in rows, to appear like a film, but it is set at about a 10* angle.  Then the words on the screen are all aligned within an invisible frame so they look like they belong overlaid as they are.</p>
     </div>
     <br>
     <div class="col3 col1T">
         <h2 id="repetition" class="what">Repetition</h2>
         <p class="company">Paper Planes</p>
         <img src="images/Repetition.jpg" alt="Paper Airplanes, Mobile" class="photo">
-        <a href="http://www.paperplanes.world" id="link">paperplanes.world</a><br>
+        <a href="http://www.paperplanes.world" class="link">paperplanes.world</a><br>
         <br>
-        <p id="description" class="purple">The repetition here is obviously the paper airplanes flying all over and with the airplane on the button.  I'm not sure if this site is actually allowed since it's technically not for a business at all, it is just a site that you can play paper airplanes with others around the world.  How fun is that?</p>
+        <p class="description purple">The repetition here is obviously the paper airplanes flying all over and with the airplane on the button.  I'm not sure if this site is actually allowed since it's technically not for a business at all, it is just a site that you can play paper airplanes with others around the world.  How fun is that?</p>
     </div>
     <br>
     <div class="col4 col2T">
    <h2 id="contrast" class="what">Contrast</h2>
    <p class="company">Beans Digital Agency</p>
    <img src="images/contrast.jpg" alt="beans working" class="beans photo">
-   <a href="https://beans.agency/" id="link">http://beans.agency</a><br>
+   <a href="https://beans.agency/" class="link">http://beans.agency</a><br>
    <br>
-   <p id="description" class="yellow">The entire image is yellow so the dark blue text really stands out and has great contrast.  The eyes are also the dark blue which makes their eyes and glasses stand out also. </p>
+   <p class="description yellow">The entire image is yellow so the dark blue text really stands out and has great contrast.  The eyes are also the dark blue which makes their eyes and glasses stand out also. </p>
    </div>
    </div>
-</body>
+</main>
 <footer onload="getYear()">
     <div class="footer-content">
         © <span id="NewYear"></span>2021 | Wendy Strickland | Utah | <a href="https://www.byui.edu/online" class="BYUI">BYUI Online Learning</a>
@@ -68,4 +70,5 @@
         <a href="index.html" class=home>Go To Home Page</a>
     </div>
 </footer>
+</body>
 </html>
