--- a/design-principles.html
+++ b/design-principles.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Design Principles assignment  | M02  |  WDD230  |  BYU-I">
     <title>Design Principles</title>
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/smalldesign.css">
     <link rel="stylesheet" href="css/mediumdesign.css">
     <link rel="stylesheet" href="css/largedesign.css">
