--- a/design-principles.html
+++ b/design-principles.html
@@ -13,6 +13,7 @@
     <script src="./js/index.js"></script>
 </head>
 <body onload="getdate()">
+    <header>
     <div class="head-grid">
             <h1 class="title">Design Principles: PARC</h1> 
             <a href="index.html" class="home">HOME</a>
@@ -24,6 +25,7 @@
             <li><a href="#contrast" class="menulink"><strong class="big">C</strong>ontrast</a></li>
    </ul>
    </div>
+   </header>
    <main>
    <div class="main">
    <div class="col1 col1T">
