--- a/Lesson03/index.html
+++ b/Lesson03/index.html
@@ -8,62 +8,11 @@
     <title>WorldWide Weather Today</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/weather.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap');
-
-body {
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    font-size: 18px;
-}
-header {
-    background-image: url("images/header.jpg");
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-}
-
-
-
-h1 {
-    font-family: 'Playfair+Display', Times, serif;
-    font-size: 50px;
-    text-align: center;
-}
-
-.class-info {
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    font-size: 25px;
-    text-align: center;
-}
-
-nav {
-    text-align: center;
-    box-shadow: 0 2px 15px #54665A;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-nav ul li a {
-    display: block;
-    color: #779280;
-    text-align: center;
-    padding: 1rem;
-    text-decoration: none;
-}
-
-    </style>
+    
 </head>
 
 <body>
     <header>
-        <img src="images/header.jpg" alt="weather header">
         <h1>Worldwide Weather Today</h1>
         <p class="class-info">Wendy Strickland  |  WDD230  |  Weather Site</p>
         </header>
@@ -77,7 +26,17 @@ nav ul li a {
         </nav>
 
     <main>
-
+        <div class="color1">
+    <h2 class="main-heading"><strong>Site Plan</strong></h2>
+        </div>
+        <hr>
+    <h3 class="section name">Site Name</h3>
+    <p class="info name">I wanted to find a name that explained the purpose of the site just in the name.  I started with worldwideweathernow, but realized that was too specific if you were looking for more than just a minute by minujte weather forcast.  So I settled on WorldWideWeatreToday WWW today</p>
+    <img src="./images/siteName.jpg" alt="Site Name and purchasing information">
+    <hr>
+    <h3 class="purpose section">Site Purpose</h3>
+    <p class="info purpose">This is a website that can show the weather around the world, in real time.  You can use it based on your current location, zip code lookup or favorite locations.  It is an excellent resource for daily life as well as travel preparation, checking on family members and friends in other locations and to be up to date on all weather alerts in an area.</p>
+    
     </main>
 
     <footer>
