--- a/Lesson03/color-scheme.html
+++ b/Lesson03/color-scheme.html
@@ -30,8 +30,10 @@
     <h2 class="main-heading"><strong>Site Plan</strong></h2>
         </div>
         <hr>
-    
-    </main>
+    <h3 class="section color-scheme">Color Scheme</h3>
+    <p class="info color-scheme">I chose colors that I felt could represent the 4 seasons so it shows that it is there for every weather type.</p>
+    <img src="images/website-color-scheme.jpg" alt="color palette created for weather site" class="colors-img">
+</main>
 
 <footer>
 
