--- a/Lesson03/index.html
+++ b/Lesson03/index.html
@@ -8,6 +8,7 @@
     <title>WorldWide Weather Today</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/weather.css">
+    <link rel="stylesheet" href="css/weathermedium.css">
     
 </head>
 
