--- a/Lesson03/typography.html
+++ b/Lesson03/typography.html
@@ -8,11 +8,11 @@
     <title>WorldWide Weather Today</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/weather.css">
-    
+    <link rel="stylesheet" href="css/weatherlarge.css">
 </head>
 
 <body>
-    <header>
+    <header style="background-image: url(./images/header.jpg)">
         <h1>Worldwide Weather Today</h1>
         <p class="class-info">Wendy Strickland  |  WDD230  |  Weather Site</p>
         </header>
