--- a/Lesson03/target-audience.html
+++ b/Lesson03/target-audience.html
@@ -35,7 +35,7 @@
         <h3 class="section audience">Target Audience and Scenerios</h3>
         <p class="info audience">Whether you are planning a trip to the beach, or preparing to scale Mt Everest, it's always good to know what to prepare for weatherwise.</p>
         <div class="grid">
-            <img src="images/huricaine.jpg" alt="water during a huricaine" class="grid1">
+            <img src="images/hurricaine.jpg" alt="water during a huricaine" class="grid1">
             <p class="fred scenerio grid1">Fred and Wilma have been marred for 25 years.  They have a combined annual income of $60k.  They have been saving their entire marriage to go on a once in a lifetime vacation.  They were generally frugal people and didn't usually splurge like this, but it was time to take that trip.  They didn't know about Worldwide Weather Today and planned their trip to the Caribbean during a Hurricane.  Their once in a lifetime trip was memorable, but for all the wrong reasons.  If only they had known there was a website that could have helped.</p>
             <img src="images/mountain.jpg" alt="mountain peak with flags" class="grid2">
             <p class="gertie scenerio grid2">Gertrude is approaching 30, is an outdoor enthusiast and enjoys traveling the world.  She is sponsored for her travels and is able to plan incredible trips without the worry of costs.  She learned about Worldwide Weather Today from a friend when she was planning to summit the highest peaks on every continent. By using the information she received from WWT she was able to plan the perfect time for each climb and successfully achieve her purpose.  Without WWT she wouldn't have been able to reach this goal.</p>
