--- a/Lesson03/color-scheme.html
+++ b/Lesson03/color-scheme.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A handy dandy weather site created by Wendy Strickland for WDD230 Web Front End | BYU-I">
     <title>WorldWide Weather Today</title>
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="css/weather.css">
     <link rel="stylesheet" href="css/weatherlarge.css">
     <script src="./js/weather.js"></script>
