--- a/Lesson03/typography.html
+++ b/Lesson03/typography.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body onload="getdate()">
     <header style="background-image: url(./images/header.jpg)">
         <h1>Worldwide Weather Today</h1>
         <p class="class-info">Wendy Strickland  |  WDD230  |  Weather Site</p>
