--- a/Lesson03/target-audience.html
+++ b/Lesson03/target-audience.html
@@ -32,7 +32,7 @@
         <div class="color1">
             <h2 class="main-heading"><strong>Site Plan</strong></h2>
         </div>
-        <h3 class="section audience">Target Audience and Scenerios</h3>
+        <h3 class="section audience">Target Audience and Scenarios</h3>
         <p class="info audience">Whether you are planning a trip to the beach, or preparing to scale Mt Everest, it's always good to know what to prepare for weatherwise.</p>
         <div class="grid">
             <img src="images/hurricaine.jpg" alt="water during a huricaine" class="grid1">
