--- a/Lesson03/index.html
+++ b/Lesson03/index.html
@@ -54,7 +54,7 @@
             </ul>
         </nav>
         <div class="footer-content">
-            © <span id="NewYear"></span>2021 | Wendy Strickland | Utah | <a href="https://www.byui.edu/online" target="_blank" class="BYUI">BYUI Online Learning</a>
+            © <span id="NewYear"></span>2021 | Wendy Strickland | Utah | <a href="https://www.byui.edu/online" target="_blank" class="BYUI2">BYUI Online Learning</a>
             <div id="work"></div>
         </div>
     </footer>
