--- a/design-principles.html
+++ b/design-principles.html
@@ -49,7 +49,7 @@
     <div class="col3 col1T">
         <h2 id="repetition" class="what">Repetition</h2>
         <p class="company">Paper Planes</p>
-        <img src="images/Repetition.jpg" alt="Paper Airplanes, Mobile" class="photo">
+        <img src="images/repetition.jpg" alt="Paper Airplanes, Mobile" class="photo">
         <a href="http://www.paperplanes.world" class="link">paperplanes.world</a><br>
         <br>
         <p class="description purple">The repetition here is obviously the paper airplanes flying all over and with the airplane on the button.  I'm not sure if this site is actually allowed since it's technically not for a business at all, it is just a site that you can play paper airplanes with others around the world.  How fun is that?</p>
