--- a/Lesson 4/preston-4.html
+++ b/Lesson 4/preston-4.html
@@ -18,7 +18,7 @@
         <img src="images/logo png.png" class="logoImage">
         <H1 class="headerH1">Worldwide Weather Today</H1>
         <hr class="headerHR">
-        <p class="headerP">Whether you are traveling around the block or around the world, get the info you need before you go!</p>
+        <p class="headerP"><strong>Whether you are traveling around the block or around the world, <br>get the info you need before you go!</strong></p>
     </header>
 
     <nav>
