--- a/Lesson04/preston-4.html
+++ b/Lesson04/preston-4.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <header style="background-image: url(./images/header.jpg)">
+    <header style="background-image: url(./images/header.jpg)" class="background-img">
 
         <img src="images/logo png.png" class="logoImage">
         <H1 class="headerH1">Worldwide Weather Today</H1>
