--- a/Lesson04/preston-4.html
+++ b/Lesson04/preston-4.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorldWide Weather Today</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/preston-4.css">
-    <link rel="stylesheet" href="css/preston-medium.css">
-    <link rel="stylesheet" href="css/preston-large.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/preston-4.css">
+    <link rel="stylesheet" href="./css/preston-medium.css">
+    <link rel="stylesheet" href="./css/preston-large.css">
     <script src="./js/preston.js"></script>
 </head>
 <body>
