--- a/Lesson04/preston-4.html
+++ b/Lesson04/preston-4.html
@@ -22,7 +22,7 @@
     </header>
 
     <nav>
-        <ul>
+        <ul class="headermenu">
             <li><a class="hamburger" href="#">Menu</a></li>
             <li><a href="#">Home</a></li>
             <li><a href="preston-4.html">Preston</a></li>
