--- a/Lesson04/preston-4.html
+++ b/Lesson04/preston-4.html
@@ -45,7 +45,7 @@
 
     <footer>
         <div class="footer-content">
-            © <span id="NewYear"></span>2021 | Wendy Strickland | Utah | <a href="https://www.byui.edu/online" target="_blank" class="BYUI2">BYUI Online Learning</a><br>
+            © <span id="NewYear"></span> | Wendy Strickland | Utah | <a href="https://www.byui.edu/online" target="_blank" class="BYUI2">BYUI Online Learning</a><br>
             Current Date: <span id="currentdate"></span><br>
         </div>
     </footer>
