--- a/Lesson04/preston-4.html
+++ b/Lesson04/preston-4.html
@@ -15,7 +15,7 @@
 
     <header style="background-image: url(./images/header-big.jpg)" class="background-img" >
 
-        <img src="images/logo png.png" alt="Watercolor sun and snowflake combined" class="logoImage">
+        <img src="images/logo-png.png" alt="Watercolor sun and snowflake combined" class="logoImage">
         <H1 class="headerH1">Worldwide Weather Today</H1>
         <hr class="headerHR">
         <p class="headerP"><strong>Whether you are traveling around the block or around the world, <br>get the info you need before you go!</strong></p>
