--- a/Lesson04/preston-4.html
+++ b/Lesson04/preston-4.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorldWide Weather Today</title>
+    <meta name="description" content="A handy dandy weather site made for WDD230">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/preston-4.css">
     <link rel="stylesheet" href="./css/preston-medium.css">
     <link rel="stylesheet" href="./css/preston-large.css">
+    <script src="./js/year.js"></script>
     <script src="./js/preston.js"></script>
 </head>
-<body onload="fulldate()">
+<body onload="getDate()">
 
-    <header style="background-image: url(./images/header-big.jpg)" class="background-img" >
+    <header style="background-image: url(./images/header-big.jpg)" class="background-img">
 
         <img src="images/logo-png.png" alt="Watercolor sun and snowflake combined" class="logoImage">
         <H1 class="headerH1">Worldwide Weather Today</H1>
