--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Assignment portal for Wendy Strickland, BYUI-WDD230: Web Frontend Development">
     <title>Wendy Strickland</title>  
+    <link rel="shortcut icon" href="favicon/ico">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/medium.css">
     <link rel="stylesheet" href="./css/large.css">
