--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
             <li>Lesson 02: <a href="./design-principles.html" class="BYUI">Design Principles</a></li>
             <li>Lesson 03: <a href="Lesson03/index.html" class="BYUI">Weather Worldwide Today</a></li>
-            <li>Lesson 04: <a href="Lesson04/preston-4.html" class="BYUI">Preston Page</a> | <a href="Lesson04Assignment2.html" class="BYUI">Link</a></li>
+            <li>Lesson 04: <a href="Lesson04/preston-4.html" class="BYUI">Preston Page</a> </li>
         </ul>
         </div>
         </main>
