--- a/Lesson 4/preston-4.html
+++ b/Lesson 4/preston-4.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorldWide Weather Today</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/preston-4.css">
-    <link rel="stylesheet" href="css/preston-medium.css">
-    <link rel="stylesheet" href="css/preston-large.css">
+    <link rel="stylesheet" href="css/bom.css">
     <script src="./js/preston.js"></script>
 </head>
 <body>
