--- a/Lesson04/preston-4.html
+++ b/Lesson04/preston-4.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WorldWide Weather Today</title>
     <meta name="description" content="A handy dandy weather site made for WDD230">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/preston-4.css">
     <link rel="stylesheet" href="./css/preston-medium.css">
@@ -37,7 +38,7 @@
     
     <main>
         <img src="https://via.placeholder.com/900x60?text=Hero+w/+weather+summary" alt="Hero placeholder" class="heroimage">
-        <br>
+        <div class="hero-box"></div>
         <img src="https://via.placeholder.com/900x60?text=5+Day+Forcast" alt="5 Day Weather Forcast placeholder" class="forcast">
         <br>
         <img src="https://via.placeholder.com/900x60?text=Article" alt="Article placeholder" class="article">
