--- a/Lesson05/bom.html
+++ b/Lesson05/bom.html
@@ -8,7 +8,7 @@
     <title>Book of Mormon - Top 25</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bom.css">
-    <script src="js/bom.js"></script>
+   
 </head>
 <body>
     <h1>📘 Book of Mormon - Top 25</h1>
@@ -26,5 +26,31 @@
 	</div>
     </div>
 </main>
+<script>
+        const list = document.querySelector('ul');
+      const input = document.querySelector('input');
+      const button = document.querySelector('button');
+
+      button.onclick = function() {
+        let myItem = input.value;
+        input.value = '';
+
+        const listItem = document.createElement('li');
+        const listText = document.createElement('span');
+        const listBtn = document.createElement('button');
+
+        listItem.appendChild(listText);
+        listText.textContent = myItem;
+        listItem.appendChild(listBtn);
+        listBtn.textContent = '❌';
+        list.appendChild(listItem);
+
+        listBtn.onclick = function(e) {
+          list.removeChild(listItem);
+        }
+
+        input.focus();
+      }
+</script>
 </body>
 </html>
