--- a/Lesson03/index.html
+++ b/Lesson03/index.html
@@ -21,10 +21,10 @@
         </header>
         <nav class="header-nav">
             <ul>
-                <li><a href="index.html" class="home">Home</a></li>
-                <li><a href="target-audience.html" class="audience">Audience</a></li>
-                <li><a href="color-scheme.html" class="colors">Colors</a></li>
-                <li><a href="typography.html" class="typography">Typography</a></li>
+                <li><a href="index.html" class="home"><strong>Home</strong></a></li>
+                <li><a href="target-audience.html" class="audience"><strong>Audience</strong></a></li>
+                <li><a href="color-scheme.html" class="colors"><strong>Colors</strong></a></li>
+                <li><a href="typography.html" class="typography"><strong>Typography</strong></a></li>
             </ul>
         </nav>
 
