--- a/Lesson03/index.html
+++ b/Lesson03/index.html
@@ -17,7 +17,7 @@
 <body onload="getdate()">
     <header style="background-image: url(./images/header.jpg)" class="headimage">
         <h1>Worldwide Weather Today</h1>
-        <h2 class="class-info">Wendy Strickland  |  WDD230  |  Weather Site</h2>
+        <p class="class-info">Wendy Strickland  |  WDD230  |  Weather Site</p>
         </header>
         <nav class="header-nav">
             <ul>
