--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li>Lesson 02: <a href="./design-principles.html" class="BYUI">Design Principles</a></li>
             <li>Lesson 03: <a href="Lesson03/index.html" class="BYUI">Weather Worldwide Today</a></li>
             <li>Lesson 04: <a href="Lesson04/preston-4.html" class="BYUI">Preston Page</a> </li>
-            <li>Lesson 05: <a href="Lesson05/bom.html" class="BYUI">Top 25 Scriptures</a></li>
+            <li>Lesson 05: <a href="Lesson05/bom.html" class="BYUI">Top 25 Scriptures</a>   |   <a href="Lesson05/preston-5.html" class="BYUI">Preston Page</a></li>
         </ul>
         </div>
         </main>
