--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             <li>Lesson 03: <a href="Lesson03/index.html" class="BYUI">Weather Worldwide Today</a></li>
             <li>Lesson 04: <a href="Lesson04/preston-4.html" class="BYUI">Preston Page</a> </li>
             <li>Lesson 05: <a href="Lesson05/bom.html" class="BYUI">Top 25 Scriptures</a>   |   <a href="Lesson05/preston-5.html" class="BYUI">Preston Page</a></li>
+            <li>Lesson 06: <a href="Lesson06" class="BYUI">Week 6</a></li>
+            <li>Lesson 07: <a href="Lesson07" class="BYUI">Week 7</a></li>
+            <li>Lesson 08: <a href="Lesson08" class="BYUI">Week 8</a></li>
+            <li>Lesson 09: <a href="Lesson09" class="BYUI">Week 9</a></li>
+            <li>Lesson 10: <a href="Lesson10" class="BYUI">Week 10</a></li>
+            <li>Lesson 11: <a href="Lesson11" class="BYUI">Week 11</a></li>
         </ul>
         </div>
         </main>
