--- a/Lesson05/preston-5.html
+++ b/Lesson05/preston-5.html
@@ -123,8 +123,8 @@
             <h2 class="contact-title">Contact Information</h2>
             <div class="contact-info">
                 <div class="contact-address">
-                    1234 Fifth Ave<br>
-                    Sixton, SV 89101<br>
+                    <img src="images/location-icon.png" alt="location icon" class="location">1234 Fifth Ave
+                    <div class="secondRow">Sixton, SV 89101</div>
                 </div>
                 <img src="images/email.png" class="contacticons emailicon" alt="email icon"><a href="mailto:info@prestontown.gov">info@prestontown.gov</a><br>
                 <img src="images/phone-icon.png" class="contacticons phoneicon" alt="phone icon"><a href="Tel: 123-456-7890">(123)456-7890</a>
