--- a/Lesson05/preston5.html
+++ b/Lesson05/preston5.html
@@ -8,18 +8,17 @@
     <meta name="description" content="Preston, ID | News | Weather | More! ">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/preston-5.css">
-    <link rel="stylesheet" href="./css/preston-medium.css">
-    <link rel="stylesheet" href="./css/preston-large.css">
+    <link rel="stylesheet" href="./css/preston5.css">
+    <link rel="stylesheet" href="./css/prestonMedium.css">
+    <link rel="stylesheet" href="./css/prestonLarge.css">
     <script src="./js/year.js"></script>
     <script src="./js/preston.js"></script>
     <script src="js/5day.js"></script>
 </head>
-<div class="pancake hide">
-    Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.
-</div>
-<body onload="getDate()">
-
+<body>
+    <div class="pancake hide">
+        Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.
+    </div>
     <header style="background-image: url(./images/header-big.jpg)" class="background-img">
         <img src="images/logo-png.png" alt="Watercolor sun and snowflake combined" class="logoImage">
         <H1 class="headerH1">Worldwide Weather Today</H1>
@@ -129,7 +128,7 @@
                     <div class="secondRow">Sixton, SV 89101</div>
                 </div>
                 <img src="images/email.png" class="contacticons emailicon" alt="email icon"><a href="mailto:info@prestontown.gov">info@prestontown.gov</a><br>
-                <img src="images/phone-icon.png" class="contacticons phoneicon" alt="phone icon"><a href="Tel: 123-456-7890">(123)456-7890</a>
+                <img src="images/phone-icon.png" class="contacticons phoneicon" alt="phone icon"><a href="Tel:123-456-7890">(123)456-7890</a>
                 <div class="social-icons">
                     <a href="www.twitter.com"><img src="images/twitter.png" alt="twitter icon" class="social twitter"></a>
                     <a href="www.facebook.com"><img src="images/facebook.png" alt="facebook icon" class="social facebook"></a>
