--- a/Lesson06/preston-6.html
+++ b/Lesson06/preston-6.html
@@ -8,11 +8,11 @@
     <meta name="description" content="Preston, ID | News | Weather | More! ">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/preston-6.css">
-    <link rel="stylesheet" href="./css/preston-6medium.css">
-    <link rel="stylesheet" href="./css/preston-6large.css">
+    <link rel="stylesheet" href="./css/preston6.css">
+    <link rel="stylesheet" href="./css/preston6Medium.css">
+    <link rel="stylesheet" href="./css/preston6Large.css">
     <script src="./js/year.js"></script>
-    <script src="./js/preston-6.js"></script>
+    <script src="./js/preston6.js"></script>
     <script src="js/5day.js"></script>
 </head>
 <div class="pancake hide">
