--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <li>Lesson 03: <a href="Lesson03/index.html" class="BYUI">Weather Worldwide Today</a></li>
             <li>Lesson 04: <a href="Lesson04/preston-4.html" class="BYUI">Preston Page</a> </li>
             <li>Lesson 05: <a href="Lesson05/bom.html" class="BYUI">Top 25 Scriptures</a>   |   <a href="Lesson05/preston5.html" class="BYUI">Preston Page</a></li>
-            <li>Lesson 06: <a href="Lesson06/preston-6.html" class="BYUI">Preston Page</a></li>
+            <li>Lesson 06: <a href="Lesson06/preston
+                6.html" class="BYUI">Preston Page</a></li>
             <li>Lesson 07: <a href="Lesson07" class="BYUI">Week 7</a></li>
             <li>Lesson 08: <a href="Lesson08" class="BYUI">Week 8</a></li>
             <li>Lesson 09: <a href="Lesson09" class="BYUI">Week 9</a></li>
