--- a/Lesson07/lazyload.html
+++ b/Lesson07/lazyload.html
@@ -11,9 +11,7 @@
 <body>
     <h1>Gallary</h1>
     <div class="pictures">
-    <picture class="pic1">
-        <img src="images/placeholder.jpg" data-src="images/salt.jpg" alt="Sunset on the Salt Flats">
-    </picture>
+        <img src="images/placeholder.jpg" data-src="images/salt.jpg" alt="Sunset on the Salt Flats" class="pic1">
     <picture class="pic2">
         <img src="images/placeholder.jpg" data-src="images/2.jpg" alt="picture 2">
     </picture>
